feat: refine UI, document design system, and standardize button opacity
- Update README.md with a Design System Legend (Colors, Statuses, Typography).
- Update NewsDetailScreen to dynamically match the text border color with the news card background.
- Standardize `activeOpacity` to 0.8 for all `TouchableOpacity` components across the app (Home, Profile, Settings, etc.) for smoother press animations.

--- a/app.json
+++ b/app.json
@@ -7,9 +7,9 @@
     "icon": "./assets/images/icon.png",
     "userInterfaceStyle": "light",
     "splash": {
-      "image": "./assets/images/splash-icon.png",
+      "image": "./assets/images/android-icon-foreground.png",
       "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
+      "backgroundColor": "#37a16a"
     },
     "ios": {
       "supportsTablet": true,
